// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiLink accent is rendered 1`] = `
<button
  class="euiLink css-120kzc5-euiLinkHoverMixin-euiLinkFocusMixin-euiLinkMixin-euiLink-colorStyles-accent-buttonText"
  type="button"
/>
`;

exports[`EuiLink allows for target and external to be controlled independently 1`] = `
<a
  class="euiLink css-1da57ii-euiLinkHoverMixin-euiLinkFocusMixin-euiLinkMixin-euiLink-colorStyles-primary"
  href="#"
  rel="noopener noreferrer"
  target="_blank"
>
  <span
    class="euiScreenReaderOnly"
  >
    (opens in a new tab or window)
  </span>
</a>
`;

exports[`EuiLink button respects the type property 1`] = `
<button
  class="euiLink css-gigilt-euiLinkHoverMixin-euiLinkFocusMixin-euiLinkMixin-euiLink-colorStyles-primary-buttonText"
  type="submit"
/>
`;

exports[`EuiLink danger is rendered 1`] = `
<button
  class="euiLink css-ves81y-euiLinkHoverMixin-euiLinkFocusMixin-euiLinkMixin-euiLink-colorStyles-danger-buttonText"
  type="button"
/>
`;

exports[`EuiLink ghost is rendered 1`] = `
<button
  class="euiLink css-10frrf7-euiLinkHoverMixin-euiLinkFocusMixin-euiLinkMixin-euiLink-colorStyles-ghost-buttonText"
  type="button"
/>
`;

exports[`EuiLink if href is not specified, it renders a button of type=button 1`] = `
<button
  class="euiLink css-gigilt-euiLinkHoverMixin-euiLinkFocusMixin-euiLinkMixin-euiLink-colorStyles-primary-buttonText"
  type="button"
/>
`;

exports[`EuiLink it is an external link 1`] = `
<a
  class="euiLink css-1da57ii-euiLinkHoverMixin-euiLinkFocusMixin-euiLinkMixin-euiLink-colorStyles-primary"
  href="/baz/bing"
  rel="noreferrer"
>
  <span
    class="css-1xdv3oo-externalIcon"
    data-euiicon-type="popout"
  >
    External link
  </span>
</a>
`;

exports[`EuiLink it passes the default props through 1`] = `
<button
  aria-label="aria-label"
  class="euiLink testClass1 testClass2 css-gigilt-euiLinkHoverMixin-euiLinkFocusMixin-euiLinkMixin-euiLink-colorStyles-primary-buttonText"
  data-test-subj="test subject string"
  type="button"
/>
`;

exports[`EuiLink it supports both href and onClick 1`] = `
<a
  class="euiLink css-1da57ii-euiLinkHoverMixin-euiLinkFocusMixin-euiLinkMixin-euiLink-colorStyles-primary"
  href="/imalink"
  rel="noreferrer"
/>
`;

exports[`EuiLink primary is rendered 1`] = `
<button
  class="euiLink css-gigilt-euiLinkHoverMixin-euiLinkFocusMixin-euiLinkMixin-euiLink-colorStyles-primary-buttonText"
  type="button"
/>
`;

exports[`EuiLink subdued is rendered 1`] = `
<button
  class="euiLink css-17s5agr-euiLinkHoverMixin-euiLinkFocusMixin-euiLinkMixin-euiLink-colorStyles-subdued-buttonText"
  type="button"
/>
`;

exports[`EuiLink success is rendered 1`] = `
<button
  class="euiLink css-1iy6ppa-euiLinkHoverMixin-euiLinkFocusMixin-euiLinkMixin-euiLink-colorStyles-success-buttonText"
  type="button"
/>
`;

exports[`EuiLink supports children 1`] = `
<a
  class="euiLink css-1da57ii-euiLinkHoverMixin-euiLinkFocusMixin-euiLinkMixin-euiLink-colorStyles-primary"
  href="#"
  rel="noreferrer"
>
  <span>
    Hiya!!!
  </span>
</a>
`;

exports[`EuiLink supports disabled 1`] = `
<button
  class="euiLink css-y68te1-euiLinkHoverMixin-euiLinkFocusMixin-euiLinkMixin-euiLink-disabled-buttonText"
  disabled=""
  type="button"
/>
`;

exports[`EuiLink supports href 1`] = `
<a
  class="euiLink css-1da57ii-euiLinkHoverMixin-euiLinkFocusMixin-euiLinkMixin-euiLink-colorStyles-primary"
  href="/baz/bing"
  rel="noreferrer"
/>
`;

exports[`EuiLink supports rel 1`] = `
<a
  class="euiLink css-1da57ii-euiLinkHoverMixin-euiLinkFocusMixin-euiLinkMixin-euiLink-colorStyles-primary"
  href="hoi"
  rel="noreferrer stylesheet"
/>
`;

exports[`EuiLink supports target 1`] = `
<a
  class="euiLink css-1da57ii-euiLinkHoverMixin-euiLinkFocusMixin-euiLinkMixin-euiLink-colorStyles-primary"
  href="#"
  rel="noopener noreferrer"
  target="_blank"
>
  <span
    class="css-1xdv3oo-externalIcon"
    data-euiicon-type="popout"
  >
    External link
  </span>
  <span
    class="euiScreenReaderOnly"
  >
    (opens in a new tab or window)
  </span>
</a>
`;

exports[`EuiLink text is rendered 1`] = `
<button
  class="euiLink css-1ww5lgi-euiLinkHoverMixin-euiLinkFocusMixin-euiLinkMixin-euiLink-colorStyles-text-buttonText"
  type="button"
/>
`;

exports[`EuiLink warning is rendered 1`] = `
<button
  class="euiLink css-m97k1c-euiLinkHoverMixin-euiLinkFocusMixin-euiLinkMixin-euiLink-colorStyles-warning-buttonText"
  type="button"
/>
`;
